make sure font dropdown is visible in bani overlay

--- a/www/src/scss/_overlay.scss
+++ b/www/src/scss/_overlay.scss
@@ -29,6 +29,7 @@ $toolbar-width: 75px;
   margin: 0 auto;
   max-width: 800px;
   overflow: hidden;
+  width: 100%;
 }
 
 .control-panel {
@@ -42,6 +43,11 @@ $toolbar-width: 75px;
 }
 
 .preview-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
   overflow: hidden;
   text-align: center;
 }
